Enable business number credential
Signed-off-by: Ian Costanzo <ian@anon-solutions.ca>

--- a/bcreg-aca/config/services.yml
+++ b/bcreg-aca/config/services.yml
@@ -308,7 +308,7 @@ issuers:
                 input: reason_description
                 from: claim
 
-      - schema: demo.business_number.registries.ca
+      - schema: business_number.registries.ca
         issuer_url: $APPLICATION_URL_ADDRESS
         description: TODO
         details:
