--- a/bcreg-aca/config/services.yml
+++ b/bcreg-aca/config/services.yml
@@ -328,13 +328,14 @@ issuers:
           type:
             input: registration.registries.ca
             from: value
-        cardinality_fields:
-          - business_number
         mapping:
           - model: attribute
             fields:
               type:
                 input: business_number
+                from: value
+              format:
+                input: category
                 from: value
               value:
                 input: business_number
