Tweaks to the BN credential processing
Signed-off-by: Ian Costanzo <ian@anon-solutions.ca>

--- a/bcreg-aca/config/services.yml
+++ b/bcreg-aca/config/services.yml
@@ -335,7 +335,7 @@ issuers:
                 input: business_number
                 from: value
               format:
-                input: category
+                input: attribute
                 from: value
               value:
                 input: business_number
