--- a/bcreg-aca/config/services.yml
+++ b/bcreg-aca/config/services.yml
@@ -18,10 +18,11 @@ issuers:
     credential_types:
       - schema: registration.registries.ca
         issuer_url: $APPLICATION_URL_INCORP
-        description: TODO
         details:
-          label_en: Registration
           url_en: $APPLICATION_URL_INCORP
+          highlighted_attributes:
+            - reason_description
+          credential_title: Registration
         credential:
           effective_date:
             input: effective_date
@@ -161,10 +162,11 @@ issuers:
 
       - schema: relationship.registries.ca
         issuer_url: $APPLICATION_URL_DBA
-        description: TODO
         details:
-          label_en: Relationship
           url_en: $APPLICATION_URL_DBA
+          highlighted_attributes:
+            - reason_description
+          credential_title: Business Relationship
         credential:
           effective_date:
             input: effective_date
@@ -252,10 +254,9 @@ issuers:
 
       - schema: address.registries.ca
         issuer_url: $APPLICATION_URL_ADDRESS
-        description: TODO
         details:
-          label_en: Corporate Address
           url_en: $APPLICATION_URL_ADDRESS
+          credential_title: Address
         credential:
           effective_date:
             input: effective_date
@@ -310,10 +311,11 @@ issuers:
 
       - schema: business_number.registries.ca
         issuer_url: $APPLICATION_URL_ADDRESS
-        description: TODO
         details:
-          label_en: Corporate Business Number
           url_en: $APPLICATION_URL_ADDRESS
+          highlighted_attributes:
+            - business_number
+          credential_title: Business Number
         credential:
           effective_date:
             input: effective_date
