--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -152,6 +152,12 @@ services:
       - BC_REG_DB_DATABASE=${BC_REG_DB_DATABASE:-BC_REGISTRIES}
       - BC_REG_DB_USER=${BC_REG_DB_USER}
       - BC_REG_DB_PASSWORD=${BC_REG_DB_PASSWORD}
+      # [bc_registries - LEAR]
+      - LEAR_DB_HOST=${LEAR_DB_HOST:-host.docker.internal}
+      - LEAR_DB_PORT=${LEAR_DB_PORT:-5454}
+      - LEAR_DB_DATABASE=${LEAR_DB_DATABASE:-lear}
+      - LEAR_DB_USER=${LEAR_DB_USER}
+      - LEAR_DB_PASSWORD=${LEAR_DB_PASSWORD}
       # [event_processor]
       - EVENT_PROC_DB_HOST=${EVENT_PROC_DB_HOST:-bcregdb}
       - EVENT_PROC_DB_PORT=${EVENT_PROC_DB_PORT:-5432}
