fix: docker build error by added venv
Signed-off-by: Akiff Manji <akiff.manji@quartech.com>

--- a/data-pipeline/docker/mara-app/Dockerfile
+++ b/data-pipeline/docker/mara-app/Dockerfile
@@ -5,22 +5,23 @@ ARG python_version=3.8
 
 RUN apt-get update -y \
     && apt-get install -y \
-                build-essential \
-                git \
-                dialog \
-                coreutils \
-                graphviz \
-                software-properties-common \
-                postgresql-client \
-                rsync
+    build-essential \
+    git \
+    dialog \
+    coreutils \
+    graphviz \
+    software-properties-common \
+    postgresql-client \
+    rsync
 RUN add-apt-repository ppa:deadsnakes/ppa
 RUN apt-get update -y \
     && apt-get install -y \
-                python$python_version \
-                python$python_version-dev \
-                python$python_version-venv \
-                python-psycopg2 \
-                libpq-dev
+    python$python_version \
+    python$python_version-dev \
+    python$python_version-venv \
+    python3-venv \
+    python-psycopg2 \
+    libpq-dev
 
 # ========================================================================================================
 # Install go-crond (from https://github.com/webdevops/go-crond)
