--- a/bcreg-aca/config/settings.yml
+++ b/bcreg-aca/config/settings.yml
@@ -1,5 +1,5 @@
 default:
   APPLICATION_URL_INCORP: $APPLICATION_URL/bcreg/incorporation
   APPLICATION_URL_DBA: $APPLICATION_URL/bcreg/dba
-  APPLICATION_URL_ADDRESS: $APPLICATION_URL/bcreg/address
+  # APPLICATION_URL_ADDRESS: $APPLICATION_URL/bcreg/address
   TEMPLATE_PATH: ../templates
